Add recommendations (#23)
* исправления по ревью